# minicom

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md
basis/: Cargo.toml
basis/src/: errors.rs  filemap.rs  lib.rs  pos.rs  sourcemap.rs
codegen/: Cargo.toml
codegen/src/: compiler.rs  lib.rs  link.rs
codegen/src/llvm/: mod.rs  target.rs
examples/: block.mini  fib.mini  function.mini  gc.mini  if.mini  locals.mini  minimum.mini  simple.mini  simple_call.mini  while.mini
lib/: minivm.c
mir/: Cargo.toml
mir/src/: lib.rs  mir.rs
runtime/src/: lib.rs
sem/: Cargo.toml
sem/src/: alpha.rs  lib.rs  transform.rs
sem/src/typing/: deref.rs  infer.rs  mod.rs  type_env.rs  typed_ast.rs
src/: ast.rs  bytecode_compiler.rs  compiler.rs  llvm.rs  main.rs  parse.rs
src/ast/: expr.rs  mod.rs  types.rs
src/check/: mod.rs
src/codegen/: compiler.rs  link.rs  mod.rs
src/compiler/: mod.rs
src/llvm/: engine.rs  mod.rs  target.rs
src/sem/: alpha.rs  infer.rs  ir.rs  mod.rs  tests.rs  tyenv.rs  typing.rs  typing2.rs  venv.rs
src/vm/: compiler.rs  instr.rs  mod.rs  stack.rs  value.rs
syntax/: Cargo.toml
syntax/src/: ast.rs  error.rs  grammar.lalrpop  grammar.rs  lib.rs  pos.rs  source.rs  token.rs
typing/: Cargo.toml
typing/src/: deref.rs  errors.rs  infer.rs  lib.rs  type_env.rs  typed_ast.rs
