[package]
name = "minicom"
version = "0.1.0"
authors = ["agatan <agatan039@gmail.com>"]

[dependencies]
log = "0.3"
env_logger = "0.4"
error-chain = "0.10"

minicom-basis = { path = "./basis" }
minicom-syntax = { path = "./syntax" }
minicom-mir = { path = "./mir" }
minicom-sem = { path = "./sem" }
minicom-codegen = { path = "./codegen" }

[lib]
name = "minicom_rt"
path = "runtime/src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[profile.release]
debug = true
